--- a/README
+++ b/README
@@ -8,7 +8,7 @@ are welcome to play with it, should you be so inclined.
 
 = LogMentor
 
-All of the guts of Kallisto is in a plugin called LogMentor under 
+All of the guts of Kallisto are in a plugin called LogMentor under 
 vendor/plugins/log_mentor.
 
 Thank you and have a nice day!
